--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,14 @@ p {
 
 #profile{
   display:inline-block;
+  padding-left: 4em;
+  margin-top: 10px;
 }
 
 #profile #avatar{
   border: 2px solid white;
   border-radius: 50%;
-  width: 85px;
+  width: 65px;
   vertical-align: middle;
 }
 
@@ -54,13 +56,27 @@ p {
   letter-spacing: 3px;
 }
 
+#navbar .row{
+  margin-top:25px;
+}
+
+#navbar .col-lg-2{
+  margin-left:10px;
+  margin-right:10px;
+  display: inline-block;
+}
+
 #navbar h3 a{
   color: #FFF;
   font-family: 'Open Sans';
   font-weight: 600;
   display: inline-block;
-  margin-left: 1em;
-  padding-top: 0.8em;
+}
+
+#navbar .current-page{
+    border-radius: 50px;
+    display: inline-block;
+    border: 2px solid #fff;
 }
 
 #header{
@@ -92,97 +108,32 @@ p {
     background: -webkit-linear-gradient(to left, #26D0CE, #1A2980);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to left, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     position: relative;
-  }
-
-#landing .landing-text {
-    position: absolute;
-    left: 0;
-    top: 50px;
-    right: 0;
-    height: calc(50% - 60px);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    flex-direction: column;
 }
-
-#landing h2 {
-    margin: 20px 0 10px 0;
-    padding: 0 15px;
-    font-size: 62px;
-    font-weight: 400;
-    line-height: 56px;
-    color: #FFF;
-  }
 
 #landing p {
-    color: #FFF;
-    margin-bottom: 20px;
-    padding: 0 15px;
-    font-size: 30px;
+  color: #FFF;
+  margin-bottom: 20px;
+  padding: 0 15px;
+  font-size: 20px;
 }
 
-@media (max-width: 768px) {
-    #intro p {
-      font-size: 18px;
-      line-height: 24px;
-      margin-bottom: 20px;
-    }
-  }
-
-#landing .btn-about-me {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    letter-spacing: 1px;
-    display: inline-block;
-    padding: 8px 28px;
-    border-radius: 50px;
-    transition: 0.5s;
-    margin: 10px;
-    border: 2px solid #fff;
-    color: #fff;
-  }
-
-#landing .img-landing {
-    position: absolute;
+#landing .landing-text{
+    height:calc(50% - 60px);
+    display:flex;
+    top:50px;
     left: 0;
     right: 0;
-    bottom: 0;
-    overflow: hidden;
-    text-align: center;
-    width: 100%;
-    height: 52%;
+    position: absolute;
+    text-align:center;
+    flex-direction: column;
+    /*Somehow justify center vertically fml */
+    justify-content: center;
 }
-/* Uncomment to show on click (overflow c'est cassé et pas beau)
-#landing .img-landing:active {
-  transform: translateY(-300px);
-  transition: all 0.2s;
-  overflow:visible;
-}
-*/
 
-  .section-header .section-title {
-    font-size: 32px;
-    color: #111;
-    text-align: center;
-    font-weight: 400;
-  }
-  
-  .section-header .section-description {
-    text-align: center;
-    padding-bottom: 40px;
-    color: #777;
-    font-style: italic;
-  }
-  
-  .section-header .section-divider {
-    display: block;
-    width: 60px;
-    height: 3px;
-    background: #1dc8cd;
-    background: linear-gradient(0deg, #1dc8cd 0%, #55fabe 100%);
-    margin: 0 auto;
-    margin-bottom: 20px;
-  }
+#landing .title{
+  font-family: Helvetica, sans-serif;
+  font-size: 4em;
+  transition: 1.5s;
+  color: #FFF;
+  text-align: center;
+}
