Inscription page & php done.

--- a/css/style-sign-up.css
+++ b/css/style-sign-up.css
@@ -111,18 +111,32 @@ header .header-fixed {
 }
 
 #sign-up .form-div{
-    border-radius: 10px;
-    background-color: floralwhite;
+    border-radius: 5px;
+    background-color: #e2e0e0;
     margin-top: 150px;
     display:flex;
     top:50px;
     left: 0;
     right: 0;
-    text-align:center;
     flex-direction: column;
     /*Somehow justify center vertically fml */
     justify-content: center;
     transition: 1.5s;
+}
+
+#sign-up .form-div p{
+  font-size: 1.2em;
+}
+
+#sign-up .form-div #form-sign-up label{
+  text-align: left;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  color: #4c4c4c;
+}
+
+input{
+  width:100%;
 }
 
 #sign-up .form-div p{
