Just pushing around

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #fff;
+    background: #1A2980;
     color: #666666;
     font-family: "Open Sans", sans-serif;
     overflow-x: hidden;
