--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
 
 a {
     color: #1dc8cd;
-    transition: 0.5s;
 }
   
 a:hover, a:active, a:focus {
@@ -20,6 +19,11 @@ p {
     padding: 0;
     margin: 0 0 30px 0;
 }
+
+#header #menu{
+  animation-duration: 0.8s;
+}
+
 
 /*----------------
   Header css  */
