--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,14 @@ p {
 #profile{
   display:inline-block;
   padding-left: 4em;
-  margin-top: 10px;
+  margin-top: 25px;
+  font-size: 20px;
 }
 
 #profile #avatar{
   border: 2px solid white;
-  border-radius: 50%;
-  width: 65px;
+  border-radius: 20%;
+  width: 40px;
   vertical-align: middle;
 }
 
