--- a/css/style.css
+++ b/css/style.css
@@ -103,9 +103,10 @@ p {
   background: #1A2980;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #26D0CE, #1A2980);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  padding: 20px 0px 20px 0px;
-  height: 90px;
-  transition: all 0.5s;
+  padding: 10px 0px 20px 0px;
+  transition: all 0.15s;
+  position:fixed;
+  height:75px;
 }
 
 #header .connect{
@@ -134,9 +135,9 @@ p {
 }
 
 #landing .landing-text{
-    height:calc(50% - 60px);
+    height:50%;
     display:flex;
-    top:50px;
+    top:25%;
     left: 0;
     right: 0;
     position: absolute;
