--- a/css/general-style.css
+++ b/css/general-style.css
@@ -1,3 +1,113 @@
+body {
+    background: #1A2980;
+    background: -webkit-linear-gradient(to left, #26D0CE, #1A2980);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: #666666;
+    font-family: "Open Sans", sans-serif;
+    overflow-x: hidden;
+  }
+
+a {
+    color: #1dc8cd;
+}
+  
+a:hover, a:active, a:focus {
+    color: #1dc9ce;
+    outline: none;
+    text-decoration: none;
+}
+
+#header #menu{
+  animation-duration: 0.8s;
+}
+
+/*----------------
+  Header css  */
+  #header h1 a{
+    color: #FFF;
+    font-family: 'Lobster', cursive;
+    font-size: 1.2em;
+    margin-left: 1em;
+    display: inline-block;
+    padding-top: 10px;
+    letter-spacing: 3px;
+  }
+  
+  #profile{
+    display:inline-block;
+    margin-top: 25px;
+    font-size: 20px;
+    text-align: center;
+  }
+  
+  #profile #avatar{
+    border: 2px solid white;
+    border-radius: 20%;
+    width: 40px;
+    vertical-align: middle;
+    margin-bottom: 20px;
+  }
+  
+  
+  #profile p{
+    color: #FFF;
+    font-family: 'Open Sans';
+    margin-left: 1em;
+    font-weight: 600;
+    display: inline-block;
+    letter-spacing: 3px;
+  }
+  
+  #navbar .row{
+    margin-top:25px;
+    margin-left:25px;
+  }
+  
+  #navbar .col-lg-2{
+    margin-left:10px;
+    margin-right:10px;
+    display: inline-block;
+  }
+  
+  #navbar h3 a{
+    color: #FFF;
+    font-family: 'Open Sans';
+    font-weight: 600;
+    display: inline-block;
+  }
+  
+  #navbar .current-page{
+      border-radius: 50px;
+      display: inline-block;
+      border: 2px solid #fff;
+  }
+  
+  #header{
+    padding-top: 20px;
+    left: 0;
+    top: 0;
+    right: 0;
+    transition: all 0.5s;
+    z-index: 997;
+    position: fixed;
+  }
+  
+  #header.header-fixed {
+    background: #1A2980;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #26D0CE, #1A2980);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #26D0CE, #1A2980); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 10px 0px 20px 0px;
+    transition: all 0.15s;
+    position:fixed;
+    height:75px;
+  }
+  
+  #header .connect{
+    color: #fff;
+    transition: 0s;
+  }
+  
+
 .dropdown-link{
     color:#000;
     font-weight: 450;
@@ -9,6 +119,12 @@
 }
 
 #topDivPush {
-    height: 92px;
+    height: 100px;
     width: 100%;
+}
+@media (min-width: 100px) and (max-width: 990px) {
+    #topDivPush {
+        height: 300px;
+        width: 100%;
+    }
 }
