--- a/css/style-depenses.css
+++ b/css/style-depenses.css
@@ -240,3 +240,7 @@ input:checked + .tab {
     text-align:center;
     padding: 0 !important;
   }
+
+#landing #participation-msg{
+    text-align:right;
+}
