Changement de l'affichage des parts en input readonly

--- a/css/style-depenses.css
+++ b/css/style-depenses.css
@@ -209,6 +209,13 @@ input:checked + .tab {
     text-align: center;
     font-family: "Open Sans", sans-serif;
 }
+
+.money-avatar{
+  color:#474747;
+  font-weight:bold;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+}
   
   .col-centered{
     float: none;
