--- a/css/style-profil.css
+++ b/css/style-profil.css
@@ -5,6 +5,7 @@
     background-color: #f2f3eb;
     border : 0;
     margin-top : 5%;
+    box-shadow: -10px 13px 39px 1px rgba(0,0,0,0.59);
 }
 
  .box-title {
@@ -22,10 +23,11 @@
     margin-bottom: 10%;
     margin-left : 5%;
     border-radius : 100%;
+    box-shadow: -10px 13px 39px 1px rgba(0,0,0,0.59);
 }
 
 .profil-infos{
-    margin-top : 15%;
+    margin-top : 10%;
     margin-left : 10%;
 }
 
@@ -56,5 +58,15 @@ tr {
     text-align: center;
     text-decoration : none;
     color: rgba(0,0,0,.85);
+    font-weight: bold;
+}
+
+.balance-négative {
+    color : red;
+    font-weight: bold;
+}
+
+.balance-positive {
+    color : green;
     font-weight: bold;
 }
