--- a/css/style-profil.css
+++ b/css/style-profil.css
@@ -23,7 +23,9 @@
     margin-bottom: 10%;
     margin-left : 5%;
     border-radius : 100%;
-    box-shadow: -10px 13px 39px 1px rgba(0,0,0,0.59);
+    -webkit-box-shadow: -10px 0px 93px -4px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: -10px 0px 93px -4px rgba(0, 0, 0, 0.35);
+    box-shadow: -10px 0px 93px -4px rgba(0, 0, 0, 0.35);
 }
 
 .profil-infos{
