--- a/css/style-dash.css
+++ b/css/style-dash.css
@@ -201,3 +201,89 @@ Dashboard event CSS*/
   align-content: center;
   margin: 0 auto;
 }
+
+/* profil bloc */
+
+.box-profil {
+    border-radius: 45px;
+    background-color: #f2f3eb;
+    border: 0;
+    margin-top: 5%;
+    box-shadow: -10px 13px 39px 1px rgba(0, 0, 0, 0.59);
+}
+
+.box-title-profil {
+    margin-top: 10%;
+    font-family: "Open Sans", sans-serif;
+    text-align: center;
+    text-decoration: none;
+    color: rgba(0, 0, 0, .85);
+    font-weight: bold;
+}
+
+.avatar-pic {
+    width: 100%;
+    margin-top: 10%;
+    margin-bottom: 10%;
+    margin-left: 5%;
+    border-radius: 100%;
+    -webkit-box-shadow: -10px 0px 93px -4px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: -10px 0px 93px -4px rgba(0, 0, 0, 0.35);
+    box-shadow: -10px 0px 93px -4px rgba(0, 0, 0, 0.35);
+}
+
+.profil-infos {
+    margin-top: 10%;
+    margin-left: 10%;
+}
+
+table {
+    font-family: "Open Sans", sans-serif;
+    font-size: 17px;
+}
+
+th {
+    padding: 20px;
+    font-weight: bold;
+}
+
+tr {
+    font-family: "Open Sans", sans-serif;
+}
+
+.date-member {
+    font-family: "Open Sans", sans-serif;
+    color: grey;
+    margin-top: 30%;
+    text-align: center;
+}
+
+.error {
+    margin: 5%;
+    font-family: "Open Sans", sans-serif;
+    text-align: center;
+    text-decoration: none;
+    color: rgba(0, 0, 0, .85);
+    font-weight: bold;
+}
+
+.balance-négative {
+    color: red;
+    font-weight: bold;
+}
+
+.balance-positive {
+    color: green;
+    font-weight: bold;
+}
+
+.avatar-bloc {
+    transition: all 0.7s;
+}
+
+.center-anim {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
